# bitcra

./: README.md
BitCrack-Replica/: CMakeLists.txt  build.bat
BitCrack-Replica/cuda/: CudaEngine.cu  CudaEngine.cuh
BitCrack-Replica/include/: Logger.hpp  PatternManager.hpp
BitCrack-Replica/src/: CpuEngine.cpp  main.cpp
